--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
     implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'androidx.webkit:webkit:1.10.0'
-
+    implementation 'org.mariuszgromada.math:MathParser.org-mXparser:4.4.2'
     implementation 'com.google.android.material:material:1.11.0'
 }
